# graphicsmagick

./: .hgignore  .hgtags  ChangeLog  ChangeLog.2006  ChangeLog.2008  ChangeLog.2009  ChangeLog.2012  ChangeLog.2022  Copyright.txt  Makefile.am  Makefile.in  NEWS.txt  README.txt  aclocal.m4  bootstrap  common.shi.in  configure  configure.ac  cscope.files  version.sh  winpath.sh
Magick++/: COPYING  ChangeLog
PerlMagick/: MANIFEST  Magick.pm  Magick.pm.in  Magick.xs  Makefile.PL.in
TclMagick/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  pkgIndex.tcl
TclMagick/generic/: Makefile.am  Makefile.in  TclMagick.c  pkgIndex.tcl.in
VisualMagick/: CMakeLists.txt  README.txt
VisualMagick/All/: All.vcproj.in
VisualMagick/configure/: configure.cpp  configure.rc  configure.sln  configure.vcproj  stdafx.h
VisualMagick/installer/inc/: body.isx  files-dlls.isx  version.isx
VisualMagick/installer/redist/VC2008SP1/: note.txt
VisualMagick/jp2/src/appl/: UTILITY.txt
VisualMagick/jpeg/: LIBRARY.txt
VisualMagick/magick/: magick_config.h.in  magick_types.h.in
VisualMagick/tests/: run_constitute.bat  run_rwblob.bat  run_rwfile.bat  runtest.bat
coders/: Makefile.am  art.c  avs.c  bmp.c  braille.c  cals.c  caption.c  cineon.c  cmyk.c  cut.c  dcm.c  dib.c  dps.c  dpx.c  ept.c  fax.c  fits.c  fpx.c  gif.c  gradient.c  gray.c  hdf.c  heif.c  histogram.c  hrz.c  html.c  icon.c  identity.c  jbig.c  jnx.c  jp2.c  jpeg.c  jxl.c  locale.c  logo.c  mac.c  map.c  mat.c  meta.c  miff.c  (+52 more)
design/: pixel-cache-struct.dot  pixel-cache.dot
doc/: GNUmakefile  GraphicsMagick.imdoc  copyright.imdoc  environment.imdoc  gmdoc2html  gmdocselect  imdoc2man  imdocselect  options.imdoc  version.imdoc
filters/: analyze.c
fuzzing/: coder_fuzzer.cc  oss-fuzz-build.sh  utils.cc
jp2/: ChangeLog  Makefile.in  configure  jasper.def  jasper.spec
jpeg/: jconfig.h  jmorecfg.h
locale/: C.mgk
magick/: GraphicsMagick-config.in  GraphicsMagick.pc.in  Makefile.am  alpha_composite.h  analyze.c  animate.c  annotate.c  api.h  attribute.c  blob.c  blob.h  cdl.c  color_lookup-private.h  color_lookup.c  colormap.c  colormap.h  colorspace.c  command.c  common.h  compare.c  composite.c  compress.c  constitute.c  delegate.c  deprecate.c  describe.c  display.c  draw.c  effect.c  enhance.c  enum_strings.c  error-private.h  error.c  error.h  export.c  floats.c  fx.c  gem.c  gem.h  gm_messages.mc  (+61 more)
patches/: webp.patch
scripts/: changelog2rst.sh  docutils_htmldeco_writer.py  format_c_api_doc.py  format_c_api_docs.py  gmsymbols.sh  graphicsmagick_snapshot_copy-local  graphicsmagick_snapshot_copy-ssh  html_fragments.py  make_www.py  named_colors.py  omp_decimal_align.py  relpath.py  rst2html5.py  rst2htmldeco.py
tests/: Makefile.am  bitstream.c  input_truecolor_1x266.miff  rwblob.c  rwblob.tap  rwfile.c  rwfile.tap  rwfile_deep.tap
utilities/: Makefile.am  gm.1
wand/: drawing_wand.c  drawtest.c  magick_wand.c  wand_symbols.h  wandtest.c  wandtests.tap
www/: ChangeLog-2001.html  ChangeLog-2002.html  ChangeLog-2003.html  ChangeLog-2004.html  ChangeLog-2005.html  ChangeLog-2006.html  ChangeLog-2007.html  ChangeLog-2008.html  ChangeLog-2009.html  ChangeLog-2010.html  ChangeLog-2011.html  ChangeLog-2012.html  ChangeLog-2013.html  ChangeLog-2014.html  ChangeLog-2015.html  ChangeLog-2016.html  ChangeLog-2017.html  ChangeLog-2018.html  ChangeLog-2019.html  ChangeLog-2020.html  ChangeLog-2021.html  ChangeLog-2022.html  Changelog.html  Changes.html  Changes.rst  Copyright.html  FAQ.html  FAQ.rst  GraphicsMagick.html  Hg.html  Hg.rst  INSTALL-unix.html  (+58 more)
(+333 files in other folders)
